microservices_http_1/deploy_local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  labels:
    app: books-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books-app
  template:
    metadata:
      labels:
        app: books-app
    spec:
      containers:
        - name: webbooks
          image: books
          ports:
            - name: books-items
              containerPort: 2200 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food
  labels:
    app: food-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: food-app
  template:
    metadata:
      labels:
        app: food-app
    spec:
      containers:
        - name: webfood
          image: food
          ports:
            - containerPort: 2100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  labels:
    app: static-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-app
  template:
    metadata:
      labels:
        app: static-app
    spec:
      containers:
        - name: webstatic
          image: static
          ports:
            - containerPort: 2000
